syntax = "proto3";

package ca.stefanm.e39.proto;

import "ConfigProto.proto";

message PiToPico {
  //TODO Someday this could be a union proto type, but not this release.
  enum MessageType {
    HeartbeatRequest = 0;
    HeartbeatResponse = 1;

    ConfigStatusRequest = 2; //Instruct the pico to tell us what it's config object is
    ConfigPush = 3; //Tell the pico what it's new config object should be

    PicoVideoRequestUpstream = 4; //Ask the pico to show upstream (for Back to BMW function)
    PicoVideoRequestPico = 5; //Ask the pico to show the debug menu
    PicoVideoRequestRpi = 6; //Ask the pico to show the RPi.
    PicoVideoRequestRVC = 7;

    //For test purposes to toggle the power switch for the RPI power supply.
    PicoPowerRequestOn = 8;
    PicoPowerRequestOff = 9;

    //Allow us to simulate ignition events without a GM or LCM or ignition switch
    SimulatedIgnitionPosition0 = 10;
    SimulatedIgnitionPosition1 = 11;
    SimulatedIgnitionPosition2 = 12;
    SimulatedIgnitionPosition3 = 13;
  }

  MessageType messageType = 1;

  ConfigProto newConfig = 2;


}